# kuti-studio-system

./: .gitignore  AGENTS.md  ARCHITECTURE.md  FRONTEND_DESIGN.md  FRONTEND_PLAN.md  IMPLEMENTATION_PLAN.md  MEDIA_GENERATION_BIBLE.md  PLAN-5.md  README.md  kuti-studio.md  kuti-tech.md  package.json
docs/: api-conventions.md  (+7 more)
kuti-backend/: .env.example  .gitignore  README.md  package.json  pyproject.toml  tsconfig.json
kuti-backend/prisma/: schema.prisma
kuti-backend/prisma/migrations/20260520130736_kuti_models/: migration.sql
kuti-backend/prisma/migrations/20260523191159_add_public_url_to_character_images/: migration.sql
kuti-backend/prisma/migrations/20260531120000_add_drama_videos/: migration.sql
kuti-backend/prisma/migrations/20260531123000_update_generation_entrypoint_default/: migration.sql
kuti-backend/src/: index.ts
kuti-backend/src/kuti_backend/: __init__.py
kuti-backend/src/kuti_backend/api/: __init__.py  errors.py  main.py  routes.py
kuti-backend/src/kuti_backend/assets/: __init__.py  api.py  models.py  repository.py  schemas.py
kuti-backend/src/kuti_backend/background/: __init__.py  orphan_checker.py
kuti-backend/src/kuti_backend/characters/: __init__.py  api.py  generation.py  models.py  repository.py  schemas.py
kuti-backend/src/kuti_backend/core/: database.py  paths.py  settings.py
kuti-backend/src/kuti_backend/exports/: __init__.py  api.py  models.py  repository.py  schemas.py
kuti-backend/src/lib/: auth.ts  config.ts  cron.ts  filesystem.ts  model-providers.ts  paths.ts  story-completion.ts
kuti-backend/tests/: test_api.py
(+283 files in other folders)
