[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "kuti-backend"
version = "0.1.0"
description = "Local FastAPI backend for Kuti Studio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kuti_backend"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
